--- a/index.html
+++ b/index.html
@@ -11,6 +11,36 @@
   <div class="container">
   <div id="mycarousel" class="carousel slide">
     <ol class="carousel-indicators">
-      < 
+      <li data-target="#mycarousel" data-slide to="0" class="active"></li>
+      <li data-target="#mycarousel" data-slide to="1"></li>
+      <li data-target="#mycarousel" data-slide to="2"><li>
+      <li data-target="#mycarousel" data-slide to="3"></li>
+      <li data-target="#mycarousel" data-slide to="4"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="item active">
+        <div class="jumbotron">
+          <img class="img-responsive" src="#" alt="#"/>
+        </div>
+        <div class="item">
+          <img class="img-responsive" src="#" alt="#"/>
+        </div>
+        <div class="item">
+          <img class="img-responsive" src="#" alt="#"/>
+        </div>
+        <div class="item">
+          <img class="img-responsive" src="#" alt="#"/>
+        </div>
+        <div class="item">
+          <img class="img-responsive" src="#" alt="#"/>
+        </div>
+      </div>
+      <a href="#mycarousel" class="left carousel-control" data-slide="prev" role="button">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+      </a>
+      <a href="#mycarousel" class="right carousel-control" data-slide="next" role="button">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+      </a>
+
   </body>
 </html>
