--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <div class="carousel-inner">
       <div class="item active">
         <div class="jumbotron">
-          <img class="img-responsive" src="#" alt="#"/>
+          <img class="img-responsive" src="james.jpg" alt="James Howard and Carrie Fisher"/>
         </div>
         <div class="item">
-          <img class="img-responsive" src="#" alt="#"/>
+          <img class="img-responsive" src="cal.jpg" alt="My lab Callahan"/>
         </div>
         <div class="item">
-          <img class="img-responsive" src="#" alt="#"/>
+          <img class="img-responsive" src="bo.jpg" alt="My mix Bohannon"/>
         </div>
         <div class="item">
           <img class="img-responsive" src="#" alt="#"/>
