--- a/index.html
+++ b/index.html
@@ -1,46 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
     <title>James Howard's Portfolio</title>
   </head>
   <h1>My Portfolio</h1>
   <h2>Created by James R. Howard</h2>
   <body>
-  <div class="container">
-  <div id="mycarousel" class="carousel slide">
-    <ol class="carousel-indicators">
-      <li data-target="#mycarousel" data-slide to="0" class="active"></li>
-      <li data-target="#mycarousel" data-slide to="1"></li>
-      <li data-target="#mycarousel" data-slide to="2"><li>
-      <li data-target="#mycarousel" data-slide to="3"></li>
-      <li data-target="#mycarousel" data-slide to="4"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="item active">
-        <div class="jumbotron">
-          <img class="img-responsive" src="james.jpg" alt="James Howard and Carrie Fisher"/>
-        </div>
-        <div class="item">
-          <img class="img-responsive" src="cal.jpg" alt="My lab Callahan"/>
-        </div>
-        <div class="item">
-          <img class="img-responsive" src="bo.jpg" alt="My mix Bohannon"/>
-        </div>
-        <div class="item">
-          <img class="img-responsive" src="#" alt="#"/>
-        </div>
-        <div class="item">
-          <img class="img-responsive" src="#" alt="#"/>
-        </div>
-      </div>
-      <a href="#mycarousel" class="left carousel-control" data-slide="prev" role="button">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-      </a>
-      <a href="#mycarousel" class="right carousel-control" data-slide="next" role="button">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-      </a>
-
+  <img src="starwars.jpg" alt="James Howard and Carrie Fisher">
+    <p>A picture of me and Carrie Fisher!</p>
+  </div>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+   <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
