fixed bootstrap issues, added about me p, h1, and ol/li. now going to rebuild carousel

--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstap.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <title>James Howard's Portfolio</title>
   </head>
   <h1>My Portfolio</h1>
   <h2>Created by James R. Howard</h2>
   <body>
-  <img src="starwars.jpg" alt="James Howard and Carrie Fisher">
-    <p>A picture of me and Carrie Fisher!</p>
+  <div class="row">
+    <div class="col-md-6">
+    <h1>About Me</h1>
+    <p>My name is James R. Howard I am 22 years old. Grew up in Milwaukie Oregon. My family consists of My mother, My Father, My sister, and Myself. We also have 4 dogs (and I own 2 of them). Im considered the funny guy to my family and friends.</p>
+    <ol>work history
+      <li>Fred meyers: Food parcel from 2011-2012</li>
+      <li>Clackamas county parks: Park Ranger from 2012-2013</li>
+      <li>Red Barn carwash: Assistant manager from 2014-2015</li>
+      <li>Portland Public School: Instructional Resorce Center Clerk from 2015-2016</li>
+    </ol>
+    <ol>Education
+      <li>Highschool</li>
+      <li>Some college for EMT and CNC</li>
+    </ol>
   </div>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
