--- a/index.html
+++ b/index.html
@@ -1,13 +1,53 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="css/bootstap.min.css">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/styles.css">
     <title>James Howard's Portfolio</title>
   </head>
   <h1>My Portfolio</h1>
   <h2>Created by James R. Howard</h2>
   <body>
+  <div class="container">
+  <div id="#mycarousel" class="carousel slide jumbotron">
+    <ol class="carousel-indicators">
+      <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#mycarousel" data-slide-to="1"></li>
+      <li data-target="#mycarousel" data-slide-to="2"></li>
+      <li data-target="#mycarousel" data-slide-to="3"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="item active">
+        <div class="jumbotron">
+          <div class="item">
+            <img class="img-responsive" src="img/james.jpg" alt="James Howard and Carrie Fisher"/>
+          </div>
+          <div class="item">
+            <img class="img-responsive" src="img/cal.jpg" alt="Callahan"/>
+          </div>
+          <div class="item">
+            <img class="img-responsive" src="img/bo.jpg" alt="Bohannon"/>
+          </div>
+          <div class="item">
+            <img class="img-responsive" src="img/starwars.jpg" alt="star wars"/>
+          </div>
+        </div>
+        <a href="#mycarousel" class="left carousel-control" data-slide="prev" role="button">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a href="#mycarousel" class="right carousel-control" data-slide="next" role="button">
+          <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+      </div>
+    </div>
+  </div>
   <div class="row">
     <div class="col-md-6">
     <h1>About Me</h1>
@@ -22,6 +62,16 @@
       <li>Highschool</li>
       <li>Some college for EMT and CNC</li>
     </ol>
+    <ol>Hobbies
+      <li>Video games</li>
+      <li>Baseball</li>
+      <li>Going to shows</li>
+      <li>Going out with friends</li>
+      <li>Driving</li>
+      <li>Fixing/working on cars</li>
+      <li>Watching movies</li>
+    </ol>
+  </div>
   </div>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
