--- a/index.html
+++ b/index.html
@@ -7,51 +7,59 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+    <!-- jQuery library -->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/styles.css">
     <title>James Howard's Portfolio</title>
   </head>
   <h1>My Portfolio</h1>
   <h2>Created by James R. Howard</h2>
   <body>
-  <div class="container">
-  <div id="#mycarousel" class="carousel slide jumbotron">
-    <ol class="carousel-indicators">
-      <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#mycarousel" data-slide-to="1"></li>
-      <li data-target="#mycarousel" data-slide-to="2"></li>
-      <li data-target="#mycarousel" data-slide-to="3"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="item active">
-        <div class="jumbotron">
-          <div class="item">
-            <img class="img-responsive" src="img/james.jpg" alt="James Howard and Carrie Fisher"/>
+
+    <div class="container">
+        <div id="mycarousel" class="carousel slide">
+          <ol class="carousel-indicators">
+            <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#mycarousel" data-slide-to="1"></li>
+            <li data-target="#mycarousel" data-slide-to="2"></li>
+            <li data-target="#mycarousel" data-slide-to="3"></li>
+            <li data-target="#mycarousel" data-slide-to="4"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="item active">
+              <div class="jumbotron">
+                <h1>Pictures about me!</h1>
+                <p>These pictures represent who I am and what i love.</p>
+              </div>
+            </div>
+            <div class="item">
+              <img class="img-responsive" src="img/james.jpg" alt="James and Carrie Fisher" />
+            </div>
+            <div class="item">
+              <img class="img-responsive" src="img/cal.jpg" alt="Callahan" />
+            </div>
+            <div class="item">
+              <img class="img-responsive" src="img/bo.jpg" alt="Bohannon" />
+            </div>
+            <div class="item">
+              <img class="img-responsive" src="img/starwars.jpg" alt="Starwars" />
+            </div>
           </div>
-          <div class="item">
-            <img class="img-responsive" src="img/cal.jpg" alt="Callahan"/>
-          </div>
-          <div class="item">
-            <img class="img-responsive" src="img/bo.jpg" alt="Bohannon"/>
-          </div>
-          <div class="item">
-            <img class="img-responsive" src="img/starwars.jpg" alt="star wars"/>
-          </div>
+          <a href="#mycarousel" class="left carousel-control" data-slide="prev" role="button">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+          </a>
+          <a href="#mycarousel" class="right carousel-control" data-slide="next" role="button">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+          </a>
         </div>
-        <a href="#mycarousel" class="left carousel-control" data-slide="prev" role="button">
-          <span class="glyphicon glyphicon-chevron-left"></span>
-        </a>
-        <a href="#mycarousel" class="right carousel-control" data-slide="next" role="button">
-          <span class="glyphicon glyphicon-chevron-right"></span>
-        </a>
-      </div>
-    </div>
-  </div>
+
   <div class="row">
     <div class="col-md-6">
     <h1>About Me</h1>
-    <p>My name is James R. Howard I am 22 years old. Grew up in Milwaukie Oregon. My family consists of My mother, My Father, My sister, and Myself. We also have 4 dogs (and I own 2 of them). Im considered the funny guy to my family and friends.</p>
+    <p>My name is <em>James R. Howard</em> I am 22 years old. Grew up in Milwaukie Oregon. My family consists of My mother, My Father, My sister, and Myself. We also have 4 dogs (and I own 2 of them). Im considered the funny guy to my family and friends.</p>
     <ol>work history
       <li>Fred meyers: Food parcel from 2011-2012</li>
       <li>Clackamas county parks: Park Ranger from 2012-2013</li>
@@ -71,11 +79,10 @@
       <li>Fixing/working on cars</li>
       <li>Watching movies</li>
     </ol>
+    </div>
   </div>
-  </div>
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-   <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="js/bootstrap.min.js"></script>
+
+  <div class="row-md-6"
+
   </body>
 </html>
