added ol of href to github repository. next i will add h and p to give info on previous projects.

--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="em">
   <head>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-
-
     <!-- jQuery library -->
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/styles.css">
@@ -19,58 +15,60 @@
   <h2>Created by James R. Howard</h2>
   <body>
 
-    <div class="container">
-        <div id="mycarousel" class="carousel slide">
-          <ol class="carousel-indicators">
-            <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#mycarousel" data-slide-to="1"></li>
-            <li data-target="#mycarousel" data-slide-to="2"></li>
-            <li data-target="#mycarousel" data-slide-to="3"></li>
-            <li data-target="#mycarousel" data-slide-to="4"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="item active">
-              <div class="jumbotron">
-                <h1>Pictures about me!</h1>
-                <p>These pictures represent who I am and what i love.</p>
-              </div>
-            </div>
-            <div class="item">
-              <img class="img-responsive" src="img/james.jpg" alt="James and Carrie Fisher" />
-            </div>
-            <div class="item">
-              <img class="img-responsive" src="img/cal.jpg" alt="Callahan" />
-            </div>
-            <div class="item">
-              <img class="img-responsive" src="img/bo.jpg" alt="Bohannon" />
-            </div>
-            <div class="item">
-              <img class="img-responsive" src="img/starwars.jpg" alt="Starwars" />
-            </div>
+  <div class="container">
+    <div id="mycarousel" class="carousel slide">
+      <ol class="carousel-indicators">
+        <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#mycarousel" data-slide-to="1"></li>
+        <li data-target="#mycarousel" data-slide-to="2"></li>
+        <li data-target="#mycarousel" data-slide-to="3"></li>
+        <li data-target="#mycarousel" data-slide-to="4"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="item active">
+          <div class="jumbotron">
+            <h1>Pictures about me!</h1>
+            <p>These pictures represent who I am and what i love.</p>
           </div>
-          <a href="#mycarousel" class="left carousel-control" data-slide="prev" role="button">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-          </a>
-          <a href="#mycarousel" class="right carousel-control" data-slide="next" role="button">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-          </a>
         </div>
+        <div class="item">
+          <img class="img-responsive" src="img/james.jpg" alt="James and Carrie Fisher" />
+        </div>
+        <div class="item">
+          <img class="img-responsive" src="img/cal.jpg" alt="Callahan" />
+        </div>
+        <div class="item">
+          <img class="img-responsive" src="img/bo.jpg" alt="Bohannon" />
+        </div>
+        <div class="item">
+          <img class="img-responsive" src="img/starwars.jpg" alt="Starwars" />
+        </div>
+      </div>
+      <a href="#mycarousel" class="left carousel-control" data-slide="prev" role="button">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+      </a>
+      <a href="#mycarousel" class="right carousel-control" data-slide="next" role="button">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+      </a>
+    </div>
 
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-lg-6">
     <h1>About Me</h1>
-    <p>My name is <em>James R. Howard</em> I am 22 years old. Grew up in Milwaukie Oregon. My family consists of My mother, My Father, My sister, and Myself. We also have 4 dogs (and I own 2 of them). Im considered the funny guy to my family and friends.</p>
-    <ol>work history
+    <p>My name is <em>James R. Howard</em> I am 22 years old. Grew up in Milwaukie Oregon. My family consists of My mother, My Father, My sister, and Myself. We also have 4 dogs <strong>(and I own 2 of them)</strong>. Im considered the funny guy to my family and friends.</p>
+    <ol><h3>work history</h3>
       <li>Fred meyers: Food parcel from 2011-2012</li>
       <li>Clackamas county parks: Park Ranger from 2012-2013</li>
       <li>Red Barn carwash: Assistant manager from 2014-2015</li>
       <li>Portland Public School: Instructional Resorce Center Clerk from 2015-2016</li>
     </ol>
-    <ol>Education
+
+    <ol><h3>Education</h3>
       <li>Highschool</li>
       <li>Some college for EMT and CNC</li>
     </ol>
-    <ol>Hobbies
+
+    <ol><h3>Hobbies</h3>
       <li>Video games</li>
       <li>Baseball</li>
       <li>Going to shows</li>
@@ -80,9 +78,35 @@
       <li>Watching movies</li>
     </ol>
     </div>
+
+
+  <div class="row">
+    <div class="row-lg-6">
+      <h1>List of projects</h1>
+      <h2>In chronological order</h2>
+
+      <ol><h3>Projects</h3>
+        <li><a href="https://github.com/JamesRHoward/hello-world">hello-world</li>
+        <li><a href="https://github.com/JamesRHoward/goodbye">goodbye</li>
+        <li><a href="https://github.com/JamesRHoward/cookie-recipe">cookie-recipe</li>
+        <li><a href="https://github.com/JamesRHoward/game-blog">game-blog(our interpretation of dog-blog)</li>
+        <li><a href="https://github.com/JamesRHoward/my-first-webpage">my-first-webpage</li>
+        <li><a href="https://github.com/JamesRHoward/moxie-the-cat">moxie-the-cat(revisited dog-blog)</li>
+        <li><a href="https://github.com/JamesRHoward/resortwebsite">resortwebsite</li>
+        <li><a href="https://github.com/JamesRHoward/cupcake-shop">cupcake-shop</li>
+        <li><a href="https://github.com/JamesRHoward/boring">boring-lecture</li>
+        <li><a href="https://github.com/JamesRHoward/resume">resume</li>
+        <li><a href="https://github.com/JamesRHoward/band">band-site</li>
+        <li><a href="https://github.com/JamesRHoward/blog">blog</li>
+        <li><a href="https://github.com/JamesRHoward/Decor">interior-decorator</li>
+        <li><a href="https://github.com/JamesRHoward/shelter">shelter-site</li>
+        <li><a href="https://github.com/JamesRHoward/vacation">vacation</li>
+        <li><a href="https://github.com/JamesRHoward/wiki">make-wiki</li>
   </div>
 
-  <div class="row-md-6"
+
+
+
 
   </body>
 </html>
