--- a/index.html
+++ b/index.html
@@ -51,6 +51,30 @@
         <span class="glyphicon glyphicon-chevron-right"></span>
       </a>
     </div>
+  </div>
+
+  <div class="row">
+    <div class="row-lg-6">
+      <h1>List of projects</h1>
+      <h2>In chronological order</h2>
+
+      <ol><h3>Projects</h3>
+        <li><a href="https://github.com/JamesRHoward/hello-world"><h4>hello-world</h4><p>hello-wolrd was used to get us used to working inside the terminal, atom, and show us how to create a HTML file.</p></li>
+        <li><a href="https://github.com/JamesRHoward/goodbye"><h4>goodbye</h4><p>goodbye was used to to get us used to working with git, atom, HTML, and github repositories.</p></li>
+        <li><a href="https://github.com/JamesRHoward/game-blog"><h4>game-blog</h4>(our interpretation of dog-blog)<p>Dog-blog was used to get us used to git commands, atom, HTML, and working with github repositories.</p></li>          <li><a href="https://github.com/JamesRHoward/cookie-recipe"><h4>cookie-recipe</h4><p></p>cookie-recipe was used to show us git commands, attom, HTML, and how to clone a repositorie from github.</li>
+        <li><a href="https://github.com/JamesRHoward/my-first-webpage"><h4>my-first-webpage</h4><p>my-first-webpage was used to teach us how to use inline HTML elements, atom, terminal, and github</p></li>
+        <li><a href="https://github.com/JamesRHoward/resortwebsite"><h4>resortwebsite</h4><p>resortwebsite was used to help us build our CSS skills and contiue building on other skills.</p></li>
+        <li><a href="https://github.com/JamesRHoward/cupcake-shop"><h4>cupcake-shop</h4><p>cupcake-shop was used to help us develop HTML and CSS</p></li>
+        <li><a href="https://github.com/JamesRHoward/boring"><h4>boring-lecture</h4><p>boring-lecture was used to teach us how to use divs and spans.</p></li>          <li><a href="https://github.com/JamesRHoward/resume"><h4>resume</h4><p>resume was used to show us how to use divs and spans.</p></li>
+        <li><a href="https://github.com/JamesRHoward/band"><h4>band-site</h4><p>band-site was used to teach us how to use floats, sidebars, and multiple columns.</p></li>
+        <li><a href="https://github.com/JamesRHoward/blog"><h4>blog</h4><p>blog was used to teach us to use divs and spans.</p></li>
+        <li><a href="https://github.com/JamesRHoward/Decor"><h4>interior-decorator</h4><p>interior decorator taught us how to use divs and spans with CSS.</p></li>
+        <li><a href="https://github.com/JamesRHoward/shelter"><h4>shelter-site</h4><p>shelter-site was used to teach us about columns and CSS.</p></li>
+        <li><a href="https://github.com/JamesRHoward/vacation"><h4>vacation</h4><p>vacation was used to teach us about using some of bootstrap's features.</p></li>
+        <li><a href="https://github.com/JamesRHoward/wiki"><h4>make-wiki</h4><p>make-wiki was used to teach us about using bootstrap to make columns similer to wikipedias main page.</p></li>
+      </ol>
+    </div>
+  </div>
 
   <div class="row">
     <div class="col-lg-6">
@@ -78,35 +102,5 @@
       <li>Watching movies</li>
     </ol>
     </div>
-
-
-  <div class="row">
-    <div class="row-lg-6">
-      <h1>List of projects</h1>
-      <h2>In chronological order</h2>
-
-      <ol><h3>Projects</h3>
-        <li><a href="https://github.com/JamesRHoward/hello-world">hello-world</li>
-        <li><a href="https://github.com/JamesRHoward/goodbye">goodbye</li>
-        <li><a href="https://github.com/JamesRHoward/cookie-recipe">cookie-recipe</li>
-        <li><a href="https://github.com/JamesRHoward/game-blog">game-blog(our interpretation of dog-blog)</li>
-        <li><a href="https://github.com/JamesRHoward/my-first-webpage">my-first-webpage</li>
-        <li><a href="https://github.com/JamesRHoward/moxie-the-cat">moxie-the-cat(revisited dog-blog)</li>
-        <li><a href="https://github.com/JamesRHoward/resortwebsite">resortwebsite</li>
-        <li><a href="https://github.com/JamesRHoward/cupcake-shop">cupcake-shop</li>
-        <li><a href="https://github.com/JamesRHoward/boring">boring-lecture</li>
-        <li><a href="https://github.com/JamesRHoward/resume">resume</li>
-        <li><a href="https://github.com/JamesRHoward/band">band-site</li>
-        <li><a href="https://github.com/JamesRHoward/blog">blog</li>
-        <li><a href="https://github.com/JamesRHoward/Decor">interior-decorator</li>
-        <li><a href="https://github.com/JamesRHoward/shelter">shelter-site</li>
-        <li><a href="https://github.com/JamesRHoward/vacation">vacation</li>
-        <li><a href="https://github.com/JamesRHoward/wiki">make-wiki</li>
-  </div>
-
-
-
-
-
   </body>
 </html>
