unable to finish, had alot of trouble with bootstrap columns(they didnt wanna sit side by side). didnt get to much CSS.

--- a/index.html
+++ b/index.html
@@ -54,45 +54,22 @@
   </div>
 
   <div class="row">
-    <div class="row-lg-6">
-      <h1>List of projects</h1>
-      <h2>In chronological order</h2>
-
-      <ol><h3>Projects</h3>
-        <li><a href="https://github.com/JamesRHoward/hello-world"><h4>hello-world</h4><p>hello-wolrd was used to get us used to working inside the terminal, atom, and show us how to create a HTML file.</p></li>
-        <li><a href="https://github.com/JamesRHoward/goodbye"><h4>goodbye</h4><p>goodbye was used to to get us used to working with git, atom, HTML, and github repositories.</p></li>
-        <li><a href="https://github.com/JamesRHoward/game-blog"><h4>game-blog</h4>(our interpretation of dog-blog)<p>Dog-blog was used to get us used to git commands, atom, HTML, and working with github repositories.</p></li>          <li><a href="https://github.com/JamesRHoward/cookie-recipe"><h4>cookie-recipe</h4><p></p>cookie-recipe was used to show us git commands, attom, HTML, and how to clone a repositorie from github.</li>
-        <li><a href="https://github.com/JamesRHoward/my-first-webpage"><h4>my-first-webpage</h4><p>my-first-webpage was used to teach us how to use inline HTML elements, atom, terminal, and github</p></li>
-        <li><a href="https://github.com/JamesRHoward/resortwebsite"><h4>resortwebsite</h4><p>resortwebsite was used to help us build our CSS skills and contiue building on other skills.</p></li>
-        <li><a href="https://github.com/JamesRHoward/cupcake-shop"><h4>cupcake-shop</h4><p>cupcake-shop was used to help us develop HTML and CSS</p></li>
-        <li><a href="https://github.com/JamesRHoward/boring"><h4>boring-lecture</h4><p>boring-lecture was used to teach us how to use divs and spans.</p></li>          <li><a href="https://github.com/JamesRHoward/resume"><h4>resume</h4><p>resume was used to show us how to use divs and spans.</p></li>
-        <li><a href="https://github.com/JamesRHoward/band"><h4>band-site</h4><p>band-site was used to teach us how to use floats, sidebars, and multiple columns.</p></li>
-        <li><a href="https://github.com/JamesRHoward/blog"><h4>blog</h4><p>blog was used to teach us to use divs and spans.</p></li>
-        <li><a href="https://github.com/JamesRHoward/Decor"><h4>interior-decorator</h4><p>interior decorator taught us how to use divs and spans with CSS.</p></li>
-        <li><a href="https://github.com/JamesRHoward/shelter"><h4>shelter-site</h4><p>shelter-site was used to teach us about columns and CSS.</p></li>
-        <li><a href="https://github.com/JamesRHoward/vacation"><h4>vacation</h4><p>vacation was used to teach us about using some of bootstrap's features.</p></li>
-        <li><a href="https://github.com/JamesRHoward/wiki"><h4>make-wiki</h4><p>make-wiki was used to teach us about using bootstrap to make columns similer to wikipedias main page.</p></li>
-      </ol>
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-lg-6">
+    <div id="right" class="col-md-4 col-sm-4">
     <h1>About Me</h1>
     <p>My name is <em>James R. Howard</em> I am 22 years old. Grew up in Milwaukie Oregon. My family consists of My mother, My Father, My sister, and Myself. We also have 4 dogs <strong>(and I own 2 of them)</strong>. Im considered the funny guy to my family and friends.</p>
-    <ol><h3>work history</h3>
+    <ul><h3>work history</h3>
       <li>Fred meyers: Food parcel from 2011-2012</li>
       <li>Clackamas county parks: Park Ranger from 2012-2013</li>
       <li>Red Barn carwash: Assistant manager from 2014-2015</li>
       <li>Portland Public School: Instructional Resorce Center Clerk from 2015-2016</li>
-    </ol>
+    </ul>
 
-    <ol><h3>Education</h3>
+    <ul><h3>Education</h3>
       <li>Highschool</li>
       <li>Some college for EMT and CNC</li>
-    </ol>
+    </ul>
 
-    <ol><h3>Hobbies</h3>
+    <ul><h3>Hobbies</h3>
       <li>Video games</li>
       <li>Baseball</li>
       <li>Going to shows</li>
@@ -100,7 +77,35 @@
       <li>Driving</li>
       <li>Fixing/working on cars</li>
       <li>Watching movies</li>
-    </ol>
+    </ul>
     </div>
+  </div>
+
+  <div class="container-fluid">
+    <div class="row">
+      <div id="left" class="col-md-6 col-sm-6">
+        <h1>List of projects</h1>
+        <h2>In chronological order</h2>
+
+        <ol><h3>Projects</h3>
+          <li><a href="https://github.com/JamesRHoward/hello-world"><h4>hello-world</h4><p>hello-wolrd was used to get us used to working inside the terminal, atom, and show us how to create a HTML file.</p></li>
+          <li><a href="https://github.com/JamesRHoward/goodbye"><h4>goodbye</h4><p>goodbye was used to to get us used to working with git, atom, HTML, and github repositories.</p></li>
+          <li><a href="https://github.com/JamesRHoward/game-blog"><h4>game-blog</h4>(our interpretation of dog-blog)<p>Dog-blog was used to get us used to git commands, atom, HTML, and working with github repositories.</p></li>
+          <li><a href="https://github.com/JamesRHoward/cookie-recipe"><h4>cookie-recipe</h4><p></p>cookie-recipe was used to show us git commands, attom, HTML, and how to clone a repositorie from github.</li>
+          <li><a href="https://github.com/JamesRHoward/my-first-webpage"><h4>my-first-webpage</h4><p>my-first-webpage was used to teach us how to use inline HTML elements, atom, terminal, and github</p></li>
+          <li><a href="https://github.com/JamesRHoward/resortwebsite"><h4>resortwebsite</h4><p>resortwebsite was used to help us build our CSS skills and contiue building on other skills.</p></li>
+          <li><a href="https://github.com/JamesRHoward/cupcake-shop"><h4>cupcake-shop</h4><p>cupcake-shop was used to help us develop HTML and CSS</p></li>
+          <li><a href="https://github.com/JamesRHoward/resume"><h4>resume</h4><p>resume was used to show us how to use divs and spans.</p></li>
+          <li><a href="https://github.com/JamesRHoward/boring"><h4>boring-lecture</h4><p>boring-lecture was used to teach us how to use divs and spans.</p></li>
+          <li><a href="https://github.com/JamesRHoward/band"><h4>band-site</h4><p>band-site was used to teach us how to use floats, sidebars, and multiple columns.</p></li>
+          <li><a href="https://github.com/JamesRHoward/blog"><h4>blog</h4><p>blog was used to teach us to use divs and spans.</p></li>
+          <li><a href="https://github.com/JamesRHoward/Decor"><h4>interior-decorator</h4><p>interior decorator taught us how to use divs and spans with CSS.</p></li>
+          <li><a href="https://github.com/JamesRHoward/shelter"><h4>shelter-site</h4><p>shelter-site was used to teach us about columns and CSS.</p></li>
+          <li><a href="https://github.com/JamesRHoward/vacation"><h4>vacation</h4><p>vacation was used to teach us about using some of bootstrap's features.</p></li>          <li><a href="https://github.com/JamesRHoward/wiki"><h4>make-wiki</h4><p>make-wiki was used to teach us about using bootstrap to make columns similer to wikipedias main page.</p></li>
+          <li><a href="https://github.com/JamesRHoward/wiki"><h4>make-wiki</h4><p>make-wiki was used to teach us about using bootstrap to make columns similer to wikipedias main page.</p></li>
+        </ol>
+      </div>
+    </div>
+  </div>
   </body>
 </html>
